Chapter 13 — Listing 13.10: MethodChainingPipeline.java Demonstrates: A complete transformation pipeline using removeIf, replaceAll,